# grebi

./: .gitignore  README.md
.github/workflows/: docker.yml
00_fetch_data/biomappings/: transform.py
00_fetch_data/ctd/: .gitignore
02_assign_ids/grebi_assign_ids/: Cargo.toml
02_assign_ids/grebi_identifiers2groups/: Cargo.toml
02_assign_ids/grebi_superclasses2types/: Cargo.toml
05_materialise/: merge_summary_jsons.py
configs/datasource_configs/: ctd.yaml  hra_kg.yaml  impc.yaml  impc_observations.yaml  medgen.yaml  ols_impc_x_gwas.yaml
configs/subgraph_configs/: Makefile  ebi_full_monarch.json  ebi_monarch.json  hett.json  impc_x_gwas.json
dataload/: Cargo.toml
dataload/01_ingest/: primekg.py
dataload/06_create_neo_db/: neo4j_import.slurm.py
dataload/07_create_db/sqlite/grebi_make_sqlite/: Cargo.toml
dataload/07_create_db/sqlite/grebi_make_sqlite/src/: main.rs
dataload/07_run_queries/: add_query_metadatas_to_graph_metadata.py  jsonl_to_csv.py  run_queries.dockerpy  run_queries.py
dataload/08_create_other_dbs/solr/grebi_link_results/: Cargo.toml
dataload/08_create_other_dbs/solr/grebi_link_results/src/: main.rs
dataload/08_run_queries/: csvs_to_sqlite.py  run_queries.dockerpy  run_queries.py  run_queries.slurm.py
dataload/docker_envs/: Dockerfile.neo4j_with_extras  (+3 more)
materialised_queries/: hello_world.yaml  impc_x_gwas.yaml
nextflow/: saturos_nextflow.config
notebooks/: gwas_x_impc.ipynb  metabolights.ipynb  summaries.ipynb
scripts/: dataload_codon.sh  dataload_saturos.sh
webapp/: docker-compose.yml  up_saturos.fish
(+195 files in other folders)
