[package]
name = "grebi_make_sqlite"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
grebi_shared = { path = "../../../grebi_shared" }
flate2 = {version="1.0.28", features=["zlib-ng"]}
serde_json = { version = "1.0.108", features=["preserve_order"] }
lz4 = "1.28.0"
rusqlite = {version="0.32.1", features=["backup"]}
jemallocator = "0.5.4"
snap = "1.1.1"


